# result

./: .build_settings.sh  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-debug.sh  build-release.sh  build.sh  conanfile.txt  docker_setup.sh  init-build.sh  result_ut.cpp  results.h
.github/workflows/: main.yaml
cmake/: dependencies.cmake  flags.cmake  static-analyzer.cmake
ut/: CMakeLists.txt  basic_usage.cpp  monadic_op.cpp
